Classpath and java 11 code compliance